# x-forward-bot

./: .gitignore  LICENSE  README.md  bot.py  get_cookies.py  pyproject.toml
src/plugins/x_forward/: __init__.py  config.py
