[project]
name = "x-forward-bot"
version = "0.1.0"
description = "x-forward-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
